[gd_scene load_steps=7 format=3 uid="uid://viwpefur1we3"]

[ext_resource type="Script" path="res://assets/scripts/ui/main_menu_actionhandeler.gd" id="1_6qub3"]
[ext_resource type="StyleBox" uid="uid://bugx4ti1jkgn6" path="res://assets/sprites/menu/ui/buttons/mainmenu_play.tres" id="1_608xf"]
[ext_resource type="StyleBox" uid="uid://ck2sgv2vib5ra" path="res://assets/sprites/menu/ui/buttons/main_menu_other.tres" id="2_dy7x7"]
[ext_resource type="StyleBox" uid="uid://b5th1xu36mh0m" path="res://assets/sprites/menu/ui/buttons/mainmenu_exitt.tres" id="3_0plgl"]
[ext_resource type="FontFile" uid="uid://c80xtbrve34xc" path="res://assets/fonts/FreeCheese-Regular.ttf" id="5_n64rc"]
[ext_resource type="Texture2D" uid="uid://3in27pcc1hf" path="res://assets/sprites/menu/ui/backgrounds/FinalBackground.jpg" id="6_t56fu"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6qub3")

[node name="ButtonHandeler" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -402.0
offset_top = -161.0
offset_right = -116.0
offset_bottom = 281.0
grow_horizontal = 0
grow_vertical = 2
theme_override_constants/separation = 10

[node name="Play" type="Button" parent="ButtonHandeler"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_n64rc")
theme_override_font_sizes/font_size = 75
theme_override_styles/focus = ExtResource("1_608xf")
theme_override_styles/hover_pressed = ExtResource("1_608xf")
theme_override_styles/hover = ExtResource("1_608xf")
theme_override_styles/pressed = ExtResource("1_608xf")
theme_override_styles/normal = ExtResource("1_608xf")
action_mode = 0
text = "Play"

[node name="Options" type="Button" parent="ButtonHandeler"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_n64rc")
theme_override_font_sizes/font_size = 75
theme_override_styles/focus = ExtResource("2_dy7x7")
theme_override_styles/disabled = ExtResource("2_dy7x7")
theme_override_styles/hover_pressed = ExtResource("2_dy7x7")
theme_override_styles/hover = ExtResource("2_dy7x7")
theme_override_styles/pressed = ExtResource("2_dy7x7")
theme_override_styles/normal = ExtResource("2_dy7x7")
action_mode = 0
text = "Options
"

[node name="Credits" type="Button" parent="ButtonHandeler"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_n64rc")
theme_override_font_sizes/font_size = 75
theme_override_styles/focus = ExtResource("2_dy7x7")
theme_override_styles/disabled = ExtResource("2_dy7x7")
theme_override_styles/hover_pressed = ExtResource("2_dy7x7")
theme_override_styles/hover = ExtResource("2_dy7x7")
theme_override_styles/pressed = ExtResource("2_dy7x7")
theme_override_styles/normal = ExtResource("2_dy7x7")
action_mode = 0
text = "Credits"

[node name="Exit" type="Button" parent="ButtonHandeler"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_n64rc")
theme_override_font_sizes/font_size = 75
theme_override_styles/focus = ExtResource("3_0plgl")
theme_override_styles/disabled = ExtResource("3_0plgl")
theme_override_styles/hover_pressed = ExtResource("3_0plgl")
theme_override_styles/hover = ExtResource("3_0plgl")
theme_override_styles/pressed = ExtResource("3_0plgl")
theme_override_styles/normal = ExtResource("3_0plgl")
action_mode = 0
text = "Exit"

[node name="GameBuild Notice" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = -2.0
offset_top = -48.0
offset_right = 135.0
offset_bottom = -2.0
grow_vertical = 0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_colors/font_selected_color = Color(0, 0, 0, 1)
text = "Untitled
pre-alpha-0.0.2a
"
fit_content = true

[node name="CopyRight Notice" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -491.0
offset_top = -14.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/normal_font_size = 10
text = "Â© DynaPound 2025. All Rights Reserved. Indevidual Assets are Property Of there Respective Creators."
fit_content = true
tab_size = 0

[node name="Title" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_top = 0.0725309
anchor_right = 1.0
anchor_bottom = 0.0725309
offset_left = -475.0
offset_bottom = 115.0
grow_horizontal = 0
theme_override_fonts/normal_font = ExtResource("5_n64rc")
theme_override_font_sizes/normal_font_size = 100
text = "Untitled"
scroll_active = false
metadata/_edit_use_anchors_ = true

[node name="TextureRect" type="TextureRect" parent="."]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("6_t56fu")
expand_mode = 1

[connection signal="pressed" from="ButtonHandeler/Play" to="." method="on_play_pressed"]
[connection signal="pressed" from="ButtonHandeler/Options" to="." method="on_options_pressed"]
[connection signal="pressed" from="ButtonHandeler/Credits" to="." method="on_credits_pressed"]
[connection signal="pressed" from="ButtonHandeler/Exit" to="." method="on_exit_pressed"]
